--- a/index.html
+++ b/index.html
@@ -40,7 +40,29 @@
         </div>
     </header>
     <main>
-
+        <section class="about secondary-background">
+             <h3 class="section-title">About Me</h3>
+             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+                <!-- .about-item*4>p.item-title+p.itemdescription -->
+                 <div class="about-item">
+                    <p class="item-title">name</p>
+                    <p class="item-description">Md Anas Ullah</p>
+                 </div>
+                 <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">mdanasullah817@gmail.com</p>
+                 </div>
+                 <div class="about-item">
+                    <p class="item-title">Date of birth</p>
+                    <p class="item-description">07 April 2004</p>
+                 </div>
+                 <div class="about-item">
+                    <p class="item-title">Form</p>
+                    <p class="item-description">Sylhet,Bangladesh</p>
+                 </div>
+            </div>
+        </section>
     </main>
     <footer>
 
