--- a/index.html
+++ b/index.html
@@ -195,8 +195,28 @@
             <div class="text-center resume-btn"><button class="btn-primary">Download CV</button></div>
         </section>
     </main>
-    <footer>
-
+    <footer class="secondary-background">
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        
+    
+           <div>
+            <a href=""><img src="portfolio-resources/images/icons/facebook.png" alt=""> </a>
+            <a href=""><img src="portfolio-resources/images/icons/insta.png" alt=""></a>
+            <a href=""><img src="portfolio-resources/images/icons/twitter.png" alt=""></a>
+           </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea><br>
+                <input class="btn-primary" type="submit" value="Submit">
+                <input class="btn-primary" type="reset" Reset>
+            </form>
+        </div>
     </footer>
 </body>
 </html>
