--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <input type="text" placeholder="Your Name">
                 <input type="email" placeholder="Your Email">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea><br>
-                <input class="btn-primary" type="submit" value="Submit">
+                <input class="btn-primary" type="submit" value="submit">
                 <input class="btn-primary" type="reset" Reset>
             </form>
         </div>
